landing page first commit

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@layer base {
+    html {
+        scroll-behavior: smooth;
+    }
+      
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@layer components {
+    .container {
+        @apply max-w-screen-xl mx-auto px-4 max-xl:px-3
+    }
+    
+    .subtitle {
+        @apply font-azonix text-4xl md:text-5xl w-fit
+    }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
