about section is done

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@
         @apply font-azonix text-4xl md:text-5xl w-fit
     }
     .about-box {
-        @apply bg-zinc-900/60 border-2 border-white/5 overflow-hidden h-80 min-w-[300px] rounded-lg hover:border-white/10 transition-all
+        @apply bg-zinc-950/60 border-2 border-white/5 overflow-hidden h-80 min-w-[300px] rounded-lg hover:border-white/10 transition-all max-sm:w-full
     }
 
 }
